# Key47

./: CMakeLists.txt  base64.h  main.cpp  main.h  resources.rc  screenshot.cpp  screenshot.h  sendemail.cpp  sendemail.h
libs/lib/: zlib.lib
libs/lib/pkgconfig/: libjpeg.pc  libtiff-4.pc  libturbojpeg.pc  libwebp.pc  libwebpdecoder.pc  libwebpdemux.pc  libwebpmux.pc
